[package]
name = "helmci"
version = "2.0.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.140"
log = { version = "0.4.27", features = ["std"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tabled = "0.18.0"
tokio = { version = "1", features = ["full"] }
slack-morphism = { version = "2.10.1", features = ["hyper"] }
chrono = "0.4.40"
hyper-rustls = "0.27.5"
hyper = "1.6.0"
async-trait = "0.1.88"
semver = "1.0.26"
url = "2.5.4"
futures = "0.3.31"
hyper-util = "0.1.11"
tap = "1.0.1"
reqwest = { version = "=0.12.15", default-features = false, features = ["json", "rustls-tls"] }
nondestructive = "0.0.26"
rustls = "0.23.26"
thiserror = "2.0.12"
sha256 = "1.6.0"
docker_credential = "1.3.1"
oci-client = { version  = "0.14.0", default-features = false, features = [ "rustls-tls"] }
async-tar = "0.5.0"
async-std = "1.13.1"
async-compression = { version = "0.4.22", features = ["futures-io", "gzip"] }
