[package]
name = "helmci"
version = "2.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.146"
log = { version = "0.4.29", features = ["std"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tabled = "0.20.0"
tokio = { version = "1", features = ["full"] }
slack-morphism = { version = "2.17.0", features = ["hyper"] }
chrono = "0.4.42"
hyper-rustls = "0.27.7"
hyper = "1.8.1"
async-trait = "0.1.89"
semver = "1.0.27"
url = "2.5.7"
futures = "0.3.31"
hyper-util = "0.1.19"
tap = "1.0.1"
reqwest = { version = "=0.12.26", default-features = false, features = ["json", "rustls-tls"] }
nondestructive = "0.0.28"
rustls = "0.23.35"
thiserror = "2.0.17"
sha256 = "1.6.0"
docker_credential = "1.3.2"
oci-client = { version  = "0.15.0", default-features = false, features = [ "rustls-tls"] }
async-tar = "0.5.1"
async-std = "1.13.2"
async-compression = { version = "0.4.36", features = ["futures-io", "gzip"] }
async-channel = "2.5.0"
aws-config = "1.8.12"
aws-sdk-ecr = "1.104.0"
aws-sdk-ecrpublic = "1.94.0"
# aws-credential-types = "1.2.8"
aws-credential-types = { version = "1.2.11", features = ["hardcoded-credentials"] } # Enable the feature here
base64 = "0.22.1"
